k8s/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: geozemservis
  labels:
    app: geozemservis
    env: stage
