k8s/_pod copy.yml
apiVersion: v1
kind: Pod
metadata:
  name: geozemservis
  namespace: geozemservis
  labels:
    app: geozemservis
    env: stage
spec:
  containers:
    - name: nginx
      image: geozemservis_nginx:latest
      ports: 
        - name: http
          containerPort: 80
      volumeMounts:
        - name: geozemservis-data
          mountPath: /var/www/html
          subPath: www
        - name: geozemservis-data
          mountPath: /var/log/nginx
          subPath: .data/logs/nginx
    - name: workspace
      image: localhost:32000/geozemservis_workspace:latest
      volumeMounts:
        - name: geozemservis-data
          mountPath: /var/www/html
          subPath: www
  volumes:
    - name: geozemservis-data
      persistentVolumeClaim: 
        claimName: geozemservis-pvc
