k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace
  namespace: geozemservis
  labels:
    app: geozemservis
    env: stage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: geozemservis
      pod: workspace
  template:
    metadata:
      name: workspace
      namespace: geozemservis
      labels:
        app: geozemservis
        pod: workspace
        env: stage
    spec:
      containers:
        - name: nginx
          image: localhost:32000/geozemservis_nginx:latest
          ports: 
            - name: http
              containerPort: 80
          volumeMounts:
            - name: geozemservis-data
              mountPath: /var/www/html
              subPath: www
            - name: geozemservis-data
              mountPath: /var/log/nginx
              subPath: .data/logs/nginx
            - name: nginx-php-stream
              mountPath: /etc/nginx/conf.d/
          resources:
            requests:
              cpu: 0.25
              memory: 256Mi
            limits:
              cpu: 0.5
              memory: 512Mi
        - name: workspace
          image: localhost:32000/geozemservis_workspace:latest
          volumeMounts:
            - name: geozemservis-data
              mountPath: /var/www/html
              subPath: www
            - name: geozemservis-data
              mountPath: /tmp/php-session
              subPath: .data/php-session
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "chmod 777 /tmp/php-session"]
            
      volumes:
        - name: geozemservis-data
          persistentVolumeClaim: 
            claimName: geozemservis-pvc
        - name: nginx-php-stream
          configMap: 
            name: geozemservis-nginx
            items:
              - key: nginx-php-stream
                path: php-upstream.conf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: geozemservis
  labels:
    app: geozemservis
    env: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geozemservis
      pod: mysql
  template:
    metadata:
      name: mysql
      namespace: geozemservis
      labels:
        app: geozemservis
        pod: mysql
        env: stage
    spec:
      containers:
        - name: mysql
          image: localhost:32000/geozemservis_mysql:latest
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: geozemservis-data
              mountPath: /var/lib/mysql
              subPath: .data/mysql
          resources:
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 2
              memory: 1G
      volumes:
        - name: geozemservis-data
          persistentVolumeClaim: 
            claimName: geozemservis-pvc
