k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: geozemservis
  namespace: geozemservis
  labels:
    app: geozemservis
    env: stage
spec:
  containers:
    - name: nginx
      image: localhost:32000/geozemservis_nginx:latest
      ports: 
        - name: http
          containerPort: 80
      volumeMounts:
        - name: geozemservis-data
          mountPath: /var/www/html
          subPath: www
        - name: geozemservis-data
          mountPath: /var/log/nginx
          subPath: .data/logs/nginx
        - name: nginx-php-stream
          mountPath: /etc/nginx/conf.d/
    - name: workspace
      image: localhost:32000/geozemservis_workspace:latest
      volumeMounts:
        - name: geozemservis-data
          mountPath: /var/www/html
          subPath: www
    - name: mysql
      image: localhost:32000/geozemservis_mysql:latest
      volumeMounts:
        - name: geozemservis-data
          mountPath: /var/lib/mysql
          subPath: .data/mysql
  volumes:
    - name: geozemservis-data
      persistentVolumeClaim: 
        claimName: geozemservis-pvc
    - name: nginx-php-stream
      configMap: 
        name: geozemservis-nginx
        items:
          - key: nginx-php-stream
            path: php-upstream.conf
