k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: http
  namespace: geozemservis
  labels:
    app: geozemservis
spec:
  selector:
    app: geozemservis
    pod: workspace
  type: NodePort
  sessionAffinity: ClientIP
  ports: 
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: geozemservis
  labels:
    app: geozemservis
spec:
  selector:
    app: geozemservis
    pod: mysql
  type: ClusterIP
  ports: 
    - name: mysql
      port: 3306
      targetPort: mysql
